# scattererwhereartthou

./: README.md  example.py  example_bounce.py  example_range.py  pyproject.toml
examples/: example.py  example_bounce.py  example_csv.py  example_range.py
src/scattererwhereartthou/: __init__.py  plot.py  spherical.py  swat.py  swat_main.py  swat_result.py
src/tests_SA/: plot_map.py  run_swat_slow_loop.sh
