[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"


[project]
name = "scattererwhereartthou"
dynamic = ["version"]
authors = [
  {name="Philip Crotwell", email = "crotwell@seis.sc.edu"}
]
description = "Find scatterer locations, via The TauP Toolkit"
readme = "README.md"
keywords = ["seismology", "traveltime"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent"
]
requires-python = ">=3.11"
dependencies = [
    'taup',
    'requests',
    'matplotlib',
    'cartopy',
    'pathlib',
    'tomli >= 1.1.0 ; python_version < "3.11"'
]

[project.urls]
Homepage = "https://github.com/crotwell/scattererWhereArtThou"
Repository = "https://github.com/crotwell/scattererWhereArtThou"
Issues = "https://github.com/crotwell/scattererWhereArtThou/issues"

[project.scripts]
swat = "scattererwhereartthou.swat_main:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.hatch.version]
path = "src/scattererwhereartthou/__init__.py"

[tool.hatch.envs.test]
  dependencies = [
    "pytest"
  ]
